<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/aboutus_item"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:paddingRight="16dp"
    android:layout_gravity="center"
    android:background="@color/grey"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    >

    <!-- ImageView for Developer Image -->
    <ImageView
        android:id="@+id/ivAmbulanceImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/ivAmbulanceImage"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRegNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#30ffffff"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/amb_reg_number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDriverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#30ffffff"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/driver_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30ffffff"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
