<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/emt"
    android:orientation="vertical"
    tools:context=".views.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/dark_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
<!--
    <Button
        android:id="@+id/requestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="59dp"
        android:background="@drawable/round_button"
        android:text="Request Emergency Services"
        android:textSize="20sp" />
-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/requestImageView"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/alert"
            android:scaleType="fitCenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Emergency Services"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginStart="10dp">

        <ImageView
            android:id="@+id/voiceCommandButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/voicecommandbutton"
            android:scaleType="fitCenter"
             />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Voice Command for Emergency Ambulance Services"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="200dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/emtLogin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/emt_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Emergency Technician"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_banner"
                android:textColor="@color/dark_blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/please_sign_in_with_your_credentials"
                android:textColor="#757575"
                tools:ignore="TextContrastCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailAddressEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:drawableEnd="@drawable/done_icon"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    tools:ignore="LabelFor,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:drawableEnd="@drawable/password_icon"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:maxLength="15"
                    tools:ignore="LabelFor,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/sign_in"
                app:cornerRadius="32dp"
                tools:ignore="InvalidId,VisualLintButtonSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <LinearLayout
                android:id="@+id/txtLoginCredential"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <TextView
                    android:id="@+id/registerRedirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.7"
                    android:text="@string/don_t_have_an_account_register_now"
                    android:textColor="#78909C"
                    android:textStyle="bold"
                    tools:ignore="InvalidId,TextContrastCheck,VisualLintBounds" />

            </LinearLayout>

            <TextView
                android:id="@+id/forgetRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:alpha="0.7"
                android:text="Forget password?"
                android:textColor="#78909C"
                android:textStyle="bold"
                tools:ignore="InvalidId,TextContrastCheck,VisualLintBounds" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>